Fix CSS, order of completed elements, and ctrl+s

--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,12 @@ body {
   margin: 0;
 }
 
+ul {
+  margin: 0;
+  padding-top: 5px;
+  padding-bottom: 5px;
+}
+
 #root > div {
   display: flex;
   flex-direction: column;
@@ -14,9 +20,16 @@ nav {
 }
 
 nav ~ * {
-  flex: 1 0 0;
+  flex: 1 1 0;
+  overflow: auto;
+}
+
+textarea {
+  min-height: 200px;
 }
 
 nav ~ ul#completed {
-  flex: 0 0 auto;
+  background-color: #eee;
+  border-top: 5px inset #ccc;
+  box-sizing: border-box;
 }
